**添加数据库存储与显示功能** 1. 将标记物体存储到数据库，并可以显示子物体列表； 2. 线和面中添加了是否合法的判断，即线不能只包含一个点、面要有闭合的边界； 3. 修复选择颜色窗口点取消后颜色被设置成黑色的bug； 4. 标记物体包添加done()方法，用于最后删除末尾的不合法的子物体和写入数据库；

--- a/IGITLandscapeViewer.vcxproj.filters
+++ b/IGITLandscapeViewer.vcxproj.filters
@@ -743,6 +743,24 @@
     <ClCompile Include="GeneratedFiles\Release\moc_CreateMarkedObjectBagDlg.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="TableViewerDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_TableViewerDlg.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_TableViewerDlg.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="TableNewFieldDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_TableNewFieldDlg.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_TableNewFieldDlg.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="mainwindow.h">
@@ -941,6 +959,18 @@
       <Filter>Form Files</Filter>
     </CustomBuild>
     <CustomBuild Include="CreateMarkedObjectBagDlg.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="ui_templates\TableViewerDlg.ui">
+      <Filter>Form Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="TableViewerDlg.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="ui_templates\TableNewFieldDlg.ui">
+      <Filter>Form Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="TableNewFieldDlg.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
@@ -1348,6 +1378,12 @@
       <Filter>Generated Files</Filter>
     </ClInclude>
     <ClInclude Include="GeneratedFiles\ui_createMarkedObjectBagDlg.h">
+      <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GeneratedFiles\ui_TableViewerDlg.h">
+      <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GeneratedFiles\ui_TableNewFieldDlg.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
   </ItemGroup>
